syntax = "proto3";

package rpc;

service Chat {
  rpc SaveMessage (ChatMessage) returns (ErrorCode) {}
}

// The request message containing the user's name.
message ChatMessage {
  int32 id = 1;
  int32 user_id = 2;
  int32 chat_room_id = 3;
  string chat_message = 4;
  string created_at = 5;
  string updated_at = 6;
}

message ErrorCode {
  int32 code = 1;
}
